--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat app",
   "homepage": "https://github.com/RenceFerry/chatify#readme",
   "scripts": {
-    "build": "npm --prefix frontend install && npm --prefix frontend run build && npm --prefix server install && npx prisma generate && npm --prefix server run build",
+    "build": "npm --prefix frontend install && npm --prefix frontend run build && npm --prefix server install && npx --prefix server prisma generate && npm --prefix server run build",
     "dev": "npm --prefix frontend run dev && npm --prefix server  run dev",
     "start": "npm --prefix server run start"
   },
