--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth2": "^0.1.10",
+    "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
@@ -22,29 +31,20 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mailtrap": "^4.4.0",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.16.3",
+    "prisma": "^7.0.1",
     "redis": "^5.10.0",
     "redis-cli": "^2.1.2",
     "socket.io": "^4.8.3",
     "tsx": "^4.21.0",
-    "zod": "^4.1.13",
-    "@faker-js/faker": "^10.2.0",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.10.1",
-    "@types/nodemailer": "^7.0.4",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth2": "^0.1.10",
-    "@types/pg": "^8.15.6",
-    "prisma": "^7.0.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    
+    "@types/nodemailer": "^6.4.21"
   }
 }
