--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "debounce": "^3.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "socket.io-client": "^4.8.3",
