--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "@faker-js/faker": "^10.2.0",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@supabase/supabase-js": "^2.93.3",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth2": "^0.1.10",
@@ -32,13 +34,13 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mailtrap": "^4.4.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.16.3",
     "prisma": "^7.0.1",
     "redis": "^5.10.0",
-    "redis-cli": "^2.1.2",
     "socket.io": "^4.8.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
